# RAF-RG-Projekat

./: CMakeLists.txt  Makefile
include/glad/: glad.h
lib/glfw/docs/: moving.dox
lib/glfw/docs/html/: moving_guide.html
lib/glm/: CMakeLists.txt  readme.md
lib/glm/doc/api/: jquery.js
resources/shaders/: floor.frag  floor.vert  light.fs.vert  main.frag  terrain.vert  water.frag  water.vert
src/: app.cpp  camera.h  glad.c  map_generator.h  mesh.h  model.h  perlin.h  shader.h  utils.h  water.h
